force-app/main/default/objects/Venue__c/fields/Average_Rating__c.field-meta.xml
<CustomField>
    <fullName>Average_Rating__c</fullName>
    <label>Average Rating</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
    <defaultValue>0</defaultValue>
</CustomField>