force-app/main/default/objects/Venue__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Self-Registered</fullName><default>false</default><label>Self-Registered</label></value>
            <value><fullName>Community-Added</fullName><default>true</default><label>Community-Added</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>